--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="row row-cols-3">
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -37,7 +37,7 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -48,7 +48,7 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -59,7 +59,7 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -70,7 +70,7 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -81,7 +81,7 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="..." alt="Card image cap" />
+            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
