--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <section class="container">
-      <div class="row row-cols-3">
+      <div class="row row-cols-2 row-cols-md-3">
         <div class="box col">
           <div class="card" style="width: 18rem">
             <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
