--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
       </div>
     </div>
     <section class="container">
-      <div class="row row-cols-2 row-cols-md-3">
+      <h2 class="d-flex justify-center my-4">SKIBIDI Group</h2>
+      <div class="row row-cols-2 row-cols-md-3 gap-y">
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -37,7 +42,11 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -48,7 +57,11 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -59,7 +72,11 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -70,7 +87,11 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -81,7 +102,11 @@
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <p class="card-text">
                 Some quick example text to build on the card title and make up
