--- a/index.html
+++ b/index.html
@@ -92,11 +92,17 @@
         </div>
       </div>
     </section>
+    <section class="container">
+      <div class="row row-cols-2 row-cols-md-3">
+      <div class="box-img">test</div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
