--- a/index.html
+++ b/index.html
@@ -26,67 +26,79 @@
       <div class="row row-cols-2 row-cols-md-3">
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
+            <div class="card-body" style="background-color: #f2beff">
+              <p class="card-text">66010583</p>
+              <p class="card-text">นายพีรณัฐ จงรักดี</p>
             </div>
           </div>
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
+            <div class="card-body" style="background-color: #81ccff">
+              <p class="card-text">66010608</p>
+              <p class="card-text">นายภวดล เนื้อสะอาด</p>
             </div>
           </div>
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
+            <div class="card-body" style="background-color: #bef1ff">
+              <p class="card-text">66010725</p>
+              <p class="card-text">นางสาววณิชญา เรืองรักเรียน</p>
             </div>
           </div>
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
+            <div class="card-body" style="background-color: #c1ffbe">
+              <p class="card-text">66010935</p>
+              <p class="card-text">นายอิทธิกร แป้นบางนา</p>
             </div>
           </div>
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
+            <div class="card-body" style="background-color: #fdffbe">
+              <p class="card-text">66011368</p>
+              <p class="card-text">นายเตชะไพบูลย์ สร้อยสาคู</p>
             </div>
           </div>
         </div>
         <div class="box col">
           <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Card image cap" />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+            <img
+              class="card-img-top"
+              src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+              alt="Card image cap"
+            />
+            <div class="card-body" style="background-color: #ffc4be">
+              <p class="card-text">66011448</p>
+              <p class="card-text">นายภัทรดนัย จำรัส</p>
             </div>
           </div>
         </div>
