--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,78 +32,78 @@
       <h2 class="d-flex justify-center my-4">SKIBIDI Group</h2>
       <div class="row row-cols-2 row-cols-md-3 gap-y">
         <div class="box col">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 18rem; border: none">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
-            <div class="card-body" style="background-color: #f2beff">
+            <div class="card-body">
               <p class="card-text">66010583</p>
               <p class="card-text">นายพีรณัฐ จงรักดี</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 18rem; border: none">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
-            <div class="card-body" style="background-color: #81ccff">
+            <div class="card-body">
               <p class="card-text">66010608</p>
               <p class="card-text">นายภวดล เนื้อสะอาด</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 18rem; border: none">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
-            <div class="card-body" style="background-color: #bef1ff">
+            <div class="card-body">
               <p class="card-text">66010725</p>
               <p class="card-text">นางสาววณิชญา เรืองรักเรียน</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 18rem; border: none">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
-            <div class="card-body" style="background-color: #c1ffbe">
+            <div class="card-body">
               <p class="card-text">66010935</p>
               <p class="card-text">นายอิทธิกร แป้นบางนา</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 18rem; border: none">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
-            <div class="card-body" style="background-color: #fdffbe">
+            <div class="card-body">
               <p class="card-text">66011368</p>
               <p class="card-text">นายเตชะไพบูลย์ สร้อยสาคู</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 18rem; border: none">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
-            <div class="card-body" style="background-color: #ffc4be">
+            <div class="card-body">
               <p class="card-text">66011448</p>
               <p class="card-text">นายภัทรดนัย จำรัส</p>
             </div>
