--- a/index.html
+++ b/index.html
@@ -19,43 +19,37 @@
     />
   </head>
   <body class="background">
-    <div class="container-fixed">
-      <nav class="navbar navbar-expand-lg px-4">
-        <a class="navbar-brand" href="#">GROUP-2</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-lg-0 ms-auto">
-            <li class="nav-item">
-              <a class="nav-link text-nav active" aria-current="page" href="#"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Education</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Skill</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
+
+    <div class="container-fixed ">
+      <nav class="navbar navbar-expand-lg bg-BEE6FF">
+        <div class="container">
+          <a class="navbar-brand" href="#" style="font-size: 24px; font-weight:700;">GROUP-2</a>
+          <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon "></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#" style="font-weight: 500;">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="font-weight: 500;">Education</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="font-weight: 500;">Skill</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn-download" href="#" style="font-weight: 500;">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn-download" href="#" style="font-weight: 500;">Contact</a>
+              </li>     
+            </ul>     
+          </div>
         </div>
-      </nav>
-    </div>
+      </nav>    
+  </div>
+
     <section class="container">
       <h2 class="d-flex justify-center my-4">SKIBIDI Group</h2>
       <div class="row row-cols-2 row-cols-md-3 gap-y">
