--- a/index.html
+++ b/index.html
@@ -51,83 +51,84 @@
   </div>
 
     <section class="container">
-      <h2 class="d-flex justify-center my-4">SKIBIDI Group</h2>
-      <div class="row row-cols-2 row-cols-md-3 gap-y">
+      <h2 class="d-flex justify-center my-5">SKIBIDI Group</h2>
+      <div class="row row-cols-2 row-cols-md-3 gap-y mx-5">
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card" style="height: 100% ; border: none ;width: 20rem">
             <img
-              class="card-img-top"
+              class="card-img-top "
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
-            <div class="card-body">
-              <p class="card-text">66010583</p>
+            <div class="card-body" >
               <p class="card-text">นายพีรณัฐ จงรักดี</p>
+              <p class="card-text">66010583</p>
+            
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card" style="height: 100% ; border: none ;width: 20rem">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010608</p>
               <p class="card-text">นายภวดล เนื้อสะอาด</p>
+              <p class="card-text">66010608</p>
             </div>
           </div>
         </div>
-        <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+        <div class="box col ">
+          <div class="card" style="height: 100% ; border: none ;width: 20rem">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010725</p>
               <p class="card-text">นางสาววณิชญา เรืองรักเรียน</p>
+              <p class="card-text">66010725</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card" style="height: 100% ; border: none ;width: 20rem">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010935</p>
               <p class="card-text">นายอิทธิกร แป้นบางนา</p>
+              <p class="card-text">66010935</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card" style="height: 100% ; border: none ;width: 20rem">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66011368</p>
               <p class="card-text">นายเตชะไพบูลย์ สร้อยสาคู</p>
+              <p class="card-text">66011368</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card" style="height: 100% ; border: none ;width: 20rem">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66011448</p>
               <p class="card-text">นายภัทรดนัย จำรัส</p>
+              <p class="card-text">66011448</p>
             </div>
           </div>
         </div>
