--- a/index.html
+++ b/index.html
@@ -19,115 +19,145 @@
     />
   </head>
   <body class="background">
-
-    <div class="container-fixed ">
+    <div class="container-fixed">
       <nav class="navbar navbar-expand-lg bg-BEE6FF">
         <div class="container">
-          <a class="navbar-brand" href="#" style="font-size: 24px; font-weight:700;">GROUP-2</a>
-          <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon "></span>
+          <a
+            class="navbar-brand"
+            href="#"
+            style="font-size: 24px; font-weight: 700"
+            >GROUP-2</a
+          >
+          <button
+            class="navbar-toggler navbar-dark"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#" style="font-weight: 500;">Home</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="#"
+                  style="font-weight: 500"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="font-weight: 500;">Education</a>
+                <a class="nav-link" href="#" style="font-weight: 500"
+                  >Education</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="font-weight: 500;">Skill</a>
+                <a class="nav-link" href="#" style="font-weight: 500">Skill</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link btn-download" href="#" style="font-weight: 500;">About</a>
+                <a
+                  class="nav-link btn-download"
+                  href="#"
+                  style="font-weight: 500"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link btn-download" href="#" style="font-weight: 500;">Contact</a>
-              </li>     
-            </ul>     
+                <a
+                  class="nav-link btn-download"
+                  href="#"
+                  style="font-weight: 500"
+                  >Contact</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
-      </nav>    
-  </div>
+      </nav>
+    </div>
 
     <section class="container">
       <h2 class="d-flex justify-center my-4">SKIBIDI Group</h2>
       <div class="row row-cols-2 row-cols-md-3 gap-y">
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010583</p>
               <p class="card-text">นายพีรณัฐ จงรักดี</p>
+              <p class="card-text">66010583</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010608</p>
               <p class="card-text">นายภวดล เนื้อสะอาด</p>
+              <p class="card-text">66010608</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010725</p>
               <p class="card-text">นางสาววณิชญา เรืองรักเรียน</p>
+              <p class="card-text">66010725</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010935</p>
               <p class="card-text">นายอิทธิกร แป้นบางนา</p>
+              <p class="card-text">66010935</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66011368</p>
               <p class="card-text">นายเตชะไพบูลย์ สร้อยสาคู</p>
+              <p class="card-text">66011368</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66011448</p>
               <p class="card-text">นายภัทรดนัย จำรัส</p>
+              <p class="card-text">66011448</p>
             </div>
           </div>
         </div>
