--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section class="container">
       <h2 class="d-flex justify-center my-5">SKIBIDI Group</h2>
-      <div class="row row-cols-2 row-cols-md-3 gap-y mx-5">
+      <div class="row row-cols-2 row-cols-md-3 gap-y mx-auto">
         <div class="box col">
           <div class="card">
             <img
@@ -91,13 +91,13 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">66010583</p>
               <p class="card-text">นายพีรณัฐ จงรักดี</p>
+              <p class="card-text">66010583</p>
             </div>
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
@@ -149,7 +149,7 @@
           </div>
         </div>
         <div class="box col">
-          <div class="card" style="height: 100%; border: none">
+          <div class="card">
             <img
               class="card-img-top"
               src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
