--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 alt="Techa"
               />
               <div class="text-item">
-                <h1>นายเตชะไพบูลย์ สร้อยสาคู</h1>
+                <h1>นายเตชะไพบูลย์ สร้อยสระคู</h1>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
