--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">นายเตชะไพบูลย์ สร้อยสาคู</p>
+              <p class="card-text">นายเตชะไพบูลย์ สร้อยสระคู</p>
               <p class="card-text">66011368</p>
             </div>
           </div>
