--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="carousel-item">
             <div class="gap-x d-md-flex">
               <img
-                src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
+                src="https://i.pinimg.com/736x/58/46/b6/5846b6c10eb85b342b8f5cf6708db09e.jpg"
                 class="img1"
                 alt="Techa"
               />
