--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <p class="card-text">นายเตชะไพบูลย์ สร้อยสาคู</p>
+              <p class="card-text">นายเตชะไพบูลย์ สร้อยสระคู</p>
               <p class="card-text">66011368</p>
             </div>
           </div>
@@ -194,6 +194,17 @@
                   cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.
                 </p>
+                <div class="social-icon">
+                  <a href="https://www.facebook.com/peeranat.chongrakdee.5"target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                  <a href="https://www.instagram.com/p_ranut/"target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa-brands fa-line"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -216,6 +227,17 @@
                   cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.
                 </p>
+                <div class="social-icon">
+                  <a href="https://www.facebook.com/phupa.nuresaard"target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                  <a href="https://www.instagram.com/phupn_/"target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-brands fa-line"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -238,6 +260,17 @@
                   cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.
                 </p>
+                <div class="social-icon">
+                  <a href="https://www.facebook.com/bowkk.vanichaya"target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                  <a href="https://www.instagram.com/vanit.rx/"target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-brands fa-line"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -260,6 +293,17 @@
                   cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.
                 </p>
+                <div class="social-icon">
+                  <a href="https://www.facebook.com/daeo.gawa"target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                  <a href="https://www.instagram.com/peem_misus"target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="https://line.me/ti/p/I490wXYDdu"target="_blank">
+                    <i class="fa-brands fa-line"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -282,6 +326,17 @@
                   cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.
                 </p>
+                <div class="social-icon">
+                  <a href="https://www.facebook.com/maime.kub.58"target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                  <a href="https://www.instagram.com/shaft_fxrd/"target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-brands fa-line"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -294,7 +349,7 @@
               />
               <div class="text-item">
                 <h1>นายภัทรดนัย จำรัส</h1>
-                <p2>
+                <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -303,10 +358,20 @@
                   dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                   cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.
-                </p2>
-                <a href="#">
-                  <i class="fa-brands fa-square-facebook"></i>
+                </p>
+                <div class="social-icon">
+                <a href="https://www.facebook.com/patrdanai.chumrus"target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
                 </a>
+                <a href="https://www.instagram.com/_patrdanai/"target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#">
+                  <i class="fa-brands fa-line"></i>
+                </a>
+              </div>
+
+                
               </div>
             </div>
           </div>
@@ -318,7 +383,7 @@
           data-bs-target="#carouselExampleControls"
           data-bs-slide="prev"
         >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-control-prev-icon " aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
         <button
@@ -327,7 +392,7 @@
           data-bs-target="#carouselExampleControls"
           data-bs-slide="next"
         >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-control-next-icon " aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
