--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="https://i.pinimg.com/736x/46/0a/98/460a988fb2f4dd258fd084bd3f300023.jpg"
+              src="https://cdn.discordapp.com/attachments/1213843735373283350/1335453641850490950/03423e89-d471-487b-b8dc-f65436d85fa1_11zon.png?ex=67a0399f&is=679ee81f&hm=a24f0804ebfba00b05a421facf331f66e10d12e323838731ff3599a30e36ee6f&"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -292,21 +292,16 @@
           <div class="carousel-item">
             <div class="gap-x d-md-flex justify-items-center">
               <img
-                src="https://i.pinimg.com/736x/46/0a/98/460a988fb2f4dd258fd084bd3f300023.jpg"
+                src="https://cdn.discordapp.com/attachments/1213843735373283350/1335453641850490950/03423e89-d471-487b-b8dc-f65436d85fa1_11zon.png?ex=67a0399f&is=679ee81f&hm=a24f0804ebfba00b05a421facf331f66e10d12e323838731ff3599a30e36ee6f&"
                 class="img1"
                 alt="Peem"
               />
               <div class="text-item">
                 <h1>นายอิทธิกร แป้นบางนา</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                    สวัสดีครับ ผมชื่ออิทธิกร แป้นบางนา ชื่อเล่น ภีม อายุ 20 ปี ตอนนี้กำลังศึกษาอยู่ที่คณะวิศวกรรมศาสตร์
+                    ในอนาคตผมอยากเป็นวิศวกรที่สามารถสร้างสรรค์นวัตกรรมใหม่ๆ เพื่อช่วยพัฒนาสังคมและประเทศชาติ
+                    ยินดีที่ได้รู้จักทุกคนครับ!
                 </p>
                 <div class="social-icon">
                   <a href="https://www.facebook.com/daeo.gawa" target="_blank">
