--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       </div>
       <div class="box col">
         <div class="card">
-          <img class="card-img-top" src="https://i.pinimg.com/736x/4c/f9/77/4cf977fb121bf7c45def38279db01331.jpg"
-            alt="Card image cap" />
+          <img class="card-img-top" src="https://media.discordapp.net/attachments/918872233601007626/1335468482627899535/skibidi_pat_3.jpg?ex=67a04772&is=679ef5f2&hm=7002c8f6bcd738711031aab3f8534ae8a4e12ddca9f2bd52da303a5e22a67f26&=&format=webp&width=671&height=671"
+            alt="Card image cap" style="aspect-ratio: 1/1;" />
           <div class="card-body">
             <p class="card-text">นายภัทรดนัย จำรัส</p>
             <p class="card-text">66011448</p>
@@ -187,7 +187,7 @@
           <div class="gap-x d-md-flex justify-items-center">
             <img
               src="https://cdn.discordapp.com/attachments/1157314954655973466/1335456473244897423/Screenshot_2025-02-02_104153.jpg?ex=67a03c42&is=679eeac2&hm=7f64ecd618745f335fe2ac8116f6afaa14ebcc4fb1a1920ed39d652d8c59b7d2&"
-              class="img1" alt="Bow" />
+              class="img1" alt="Bow" style="aspect-ratio: 1/1;"/>
             <div class="text-item">
               <h1>นางสาววณิชญา เรืองรักเรียน</h1>
               <p>
@@ -195,7 +195,7 @@
                 ชื่อเล่น โบว์ 
                 <p>อายุ 19 ปี จะ 20 อีก 2 วันนับจากวันที่ 2 กุมภา แต่จิตใจยัง 15</p>
                 อาหารที่ชอบ ชาบู
-                ไม่ชอบกินทุเรียน ไม่ใช่เพราะเหม็นแต่ ไม่อร่อยเลี้ยน 
+                ไม่ชอบกินทุเรียน ไม่ใช่เพราะเหม็นแต่ ไม่อร่อยเลี้ยนㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
               </p>
               <div class="social-icon">
                 <a href="https://www.facebook.com/bowkk.vanichaya" target="_blank">
@@ -269,18 +269,14 @@
         </div>
         <div class="carousel-item">
           <div class="gap-x d-md-flex justify-items-center">
-            <img src="https://i.pinimg.com/736x/4c/f9/77/4cf977fb121bf7c45def38279db01331.jpg" class="img1" alt="Pat" />
+            <img src="https://media.discordapp.net/attachments/918872233601007626/1335468482627899535/skibidi_pat_3.jpg?ex=67a04772&is=679ef5f2&hm=7002c8f6bcd738711031aab3f8534ae8a4e12ddca9f2bd52da303a5e22a67f26&=&format=webp&width=671&height=671" 
+            class="img1 img-container" 
+            alt="Pat" 
+            />
             <div class="text-item">
               <h1>นายภัทรดนัย จำรัส</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum.
+                ข้าพเจ้านายภัทรดนัย จำรัส หรือจะเรียกสั้น ๆ ว่า ภัทร เกิดในปีพุทธศักราช 2547 ในเดือนพฤศจิกายน ในเวลาว่างนั้นข้าพเจ้าชอบทำอาหาร เล่นเกมส์และออกกำลังกายในยามที่เบื่อหน่าย อีกทั้ง ณ ตอนนี้ข้าพเจ้าได้เข้ารับการศึกษาในคณะวิศวกรรมศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ และเป็นนักศึกษาชั้นปีที่ 2 ในสาขาวิศวกรรมคอมพิวเตอร์ไอโอทีและสารสนเทศ หากมีคำถามหรือสนใจติดต่อได้ที่เบอร์โทรศัพท์ 098-765-4321 ขอบคุณครับ 
               </p>
               <div class="social-icon">
                 <a href="https://www.facebook.com/patrdanai.chumrus" target="_blank">
